@@ -1,3 +1,10 @@
+2005-07-27 10:23 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridinsert.c (gridSplitEdgeForce) produce stdout msg that
+	can not split inbetween faces
+	* src/gridinsert.c (gridAdaptLongShort,gridSplitEdgeRepeat,
+	gridSplitEdgeForce) propigated debug_split
+
 2005-07-27 08:32 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridinsert.c (gridAdaptLongShort) if gridSplitEdgeRatio is
